[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bomb/Bomb(new).gd" type="Script" id=1]
[ext_resource path="res://Bomb/bomb_by_drcappella-dc3peuv.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Bomb" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Z Index" ]

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

position = Vector2( -2.37584, 2.37585 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Bomb_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_Bomb_body_exited"]

[connection signal="body_shape_entered" from="." to="." method="_on_Bomb_body_shape_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


